--- a/pContact.html
+++ b/pContact.html
@@ -50,7 +50,7 @@
             </div>
           </div>
 
-          <form class="send-form"action="https://formsubmit.co/brendangideon97@gmail.com" method="POST">
+          <form class="send-form"action="https://formsubmit.co/brendangideon97@gmail.com" target="_blank" method="POST">
             <input type="text" placeholder="name" class="box">
             <input type="email" placeholder="Email" class="box">
             <textarea name="message" id="" cols="30" rows="10" class="box message" placeholder="Message"></textarea>
