--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </div>
             
             <div class="fr2" data-aos="fade-right">
-              <p>Hi! My name's Brendan! I've been doing web development since 2021 until 2022, I'm ready to help you with any project. We usually create unique sites from scratch that include all the elements that you want to add to it.
-              Hi, we’ve been doing web design and development for a year now. We've built some amazing websites, optimized the speed of over 20 sites, and much more. If you have an eye for something website - i would be glad to deliver, Elementor - go with us, Speed optimization - 1000% go with us.
+              <p>Hi! My name's Brendan! I've started my web development journey this 2022, I'm ready to help you with any project. I usually create unique sites from scratch that include all the elements that you want to add to it.
+              Hi, i’ve been doing web design and development for a year now. Haveve built some amazing websites, optimized the speed of over 20 sites, and much more. If you have an eye for something website - i would be glad to deliver, Elementor - go with us, Speed optimization - 1000% go with us.
             </p>
               <p><span>I'm an expert in
               </span>CSS3, HTML5, JvaScript...</p>
